GNOME Bugzilla – Bug 730080
Impossible to add non-web type accounts (OwnCloud, Exchange, Jabber...) in 3.13.1 - cannot complete dialogs
Last modified: 2014-05-22 22:32:22 UTC
Created attachment 276474 [details] screenshot of an example problematic dialog Via the Control Center 'Online Accounts' panel, in control-center 3.13.1, it seems impossible to add any kind of 'non-web' type account - that is, account types that don't use some kind of web UI for authentication, e.g. OwnCloud, Exchange, and Jabber. There is no OK button, or indeed any button of any kind, in the dialog that pops up for such accounts. You can fill in all your account details, but there seems to be no way to complete the dialog - even tab tricks to try and find a 'hidden' button don't seem to work, nor does hitting Enter. All you can do is hit Esc to cancel back out. Screenshot attached. To reproduce: open Control Center, go to Online Accounts, click +, select the OwnCloud account type, note there is no apparent way to complete the dialog.
running current Fedora Rawhide, control-center-3.13.1-4.fc21.x86_64 , gnome-online-accounts-3.13.1-1.fc21.x86_64 .
This is a fallout from this gtk+ commit: commit 7e479aa9eeff38d358d20b155a55a07ab04ba1e9 Author: William Jon McCann <william.jon.mccann@gmail.com> Date: Wed Apr 9 14:30:37 2014 -0400 dialog: add a box around the action area to use for styling If we want to set style properties that include the area of the border-width part of action_area we need to use a parent box. https://bugzilla.gnome.org/show_bug.cgi?id=722211 As a result of that the widget returned by gtk_dialog_get_action_area is not a part of gtk_container_get_children, which breaks the logic in add_account_dialog_add_account in panels/online-accounts/cc-online-accounts-add-account-dialog.c
I think that instead of trying to actually fix this, we should just switch over to using header bars in this dialog.
Created attachment 276921 [details] [review] online-accounts: Use a header bar for the "Add Account" dialog
Review of attachment 276921 [details] [review]: Looks fine
Comment on attachment 276921 [details] [review] online-accounts: Use a header bar for the "Add Account" dialog Thanks for the review, Bastien.
Fix confirmed (and backported to Rawhide, just cos I'm that nice :P). thanks!