online-accounts: Use a header bar for the "Add Account" dialog

Even though this is an action dialog, and not a presentation dialog,
as defined in the HIG [1], there is no need for action buttons when
showing the initial list because the list is single-click.

[1] https://wiki.gnome.org/Design/HIG/Dialogs

https://bugzilla.gnome.org/show_bug.cgi?id=730080